# pear

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  openapi.json
backend/: .gitignore  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260613_2016_initial_schema_e46068a576fd.py  20260613_2017_seed_prompt_templates_89a26f2a9010.py  20260613_2055_auth_identities_and_refresh_tokens_e215e819cb18.py  20260613_2056_rls_policies_and_functions_4a5166053ba0.py  20260613_2300_profile_reports_select_policy_b1c2d3e4f5a6.py  20260614_1200_media_table_b72c92260ee1.py  20260614_1230_media_refs_on_photos_and_avatars_c83da3371ff2.py  20260614_1300_media_select_policy_d4e5f6a7b8c9.py  20260614_1400_denormalize_owner_id_flatten_rls_e5f6a7b8c9d0.py  20260614_2328_messages_match_id_created_at_index_4cb603ce8f63.py  20260629_0336_initial_schema_int_sqid_4b908109b662.py  20260629_0336_rls_policies_functions_and_grants_41e71251b338.py  20260629_0336_seed_prompt_templates_57d4ba2fa704.py  20260629_1457_drop_rls_on_profiles_identity_table_e74b9f4587a7.py  20260629_1816_route_lifecycle_through_state_machine_9b8becc20c04.py  20260630_1814_rls_declarative_co_located_policies_4781fa1bd8e5.py  20260630_2013_matches_insert_policy_mutual_approved__d926750af59e.py  20260630_2142_messages_update_rls_match_participant__c674b8890889.py  20260701_1200_add_app_updates_table_ota_manifest_dccdc4d3bb22.py  20260701_1854_add_native_build_fingerprints_table_97fbccef7294.py  20260701_2119_split_decision_unique_constraint_for__8cbb6402f2b9.py  20260701_2213_coarsen_prompt_responses_read_to__e841c4a09f5b.py  20260709_1425_drop_native_build_fingerprints_table_f41d2e8068fa.py  20260709_2042_add_profile_deactivated_at_and_auth__a774a0162de1.py  (+2 more)
backend/app/: config.py  factory.py  index.py
backend/app/demo/: seed.py  (+1 more)
backend/scripts/: check_conventions.py
backend/tests/: conftest.py  test_actions.py  test_auth_provider.py  test_contacts.py  test_dating_profiles.py  test_decisions.py  test_discover.py  test_email.py  test_invite_token.py  test_likes_you.py  test_login_methods.py  test_matches.py  test_media.py  test_media_client.py  test_messages.py  test_multipart.py  test_photos.py  test_profiles.py  test_prompts.py  test_push.py  test_realtime.py  test_reports.py  test_rls.py  test_rls_bootstrap.py  test_rls_coverage.py  test_rls_mixins.py  test_state_machine.py  test_storage.py  test_updates.py  test_wing_pool.py  test_winger_activity.py
(+551 files in other folders)
