[project]
name = "pear-api"
version = "0.1.0"
description = "Pear backend API"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "litestar[standard]",
  "advanced-alchemy",
  "sqlalchemy",
  "psycopg[binary]",
  "alembic",
  "alembic-utils",
  "python-dotenv",
  "uvicorn",
  "litestar-saq>=0.1.6",
  "saq>=0.25.2",
  "redis>=5.0",
  "aioboto3>=13.0.0",
  "boto3>=1.35",
  "Pillow>=10.0",
  "email-validator>=2.0",
  "jinja2",
  "msgspec",
  "pyjwt[crypto]>=2.9",
  # HTTP/2 for direct APNs (Apple requires HTTP/2). Pulls in `h2`.
  "httpx[http2]>=0.27",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.9",
  "basedpyright>=1.23",
  "polyfactory>=3.3.0",
  "faker>=30.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "PLC",
]

[tool.ruff.lint.per-file-ignores]
"app/index.py"           = ["E402", "I001"]
"alembic/env.py"         = ["E402"]
"alembic/versions/*.py"  = ["E501", "W291", "UP035"]
"app/config.py"          = ["N802"]
# Domain response/request structs use camelCase field names to match the Hono/Zod
# wire contract the mobile app's Orval hooks consume byte-for-byte (N815).
"app/domain/*/schemas.py" = ["N815"]
# The realtime WS frame structs likewise use camelCase (userId, onlineIds) to match
# the client's existing realtime payloads byte-for-byte (N815).
"app/platform/realtime/schemas.py" = ["N815"]
# Media request/response structs use camelCase field names to match the wire
# contract the mobile app's generated hooks consume byte-for-byte (N815).
"app/platform/media/schemas.py" = ["N815"]
# Read handlers take camelCase path params ({matchId}/{userId}) so the exported
# OpenAPI path + parameter names match the old Hono spec the Orval client was
# generated from byte-for-byte (N803: argument name should be lowercase).
"app/domain/*/routes.py" = ["N803"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.basedpyright]
typeCheckingMode = "basic"
ignore = ["alembic/versions"]
reportIncompatibleMethodOverride = "error"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
